--- a/Australian_Cancer_Health.ipynb
+++ b/Australian_Cancer_Health.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 261,
    "id": "6e4a0f91",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 262,
    "id": "8c747ad4",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 263,
    "id": "c42d844f",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 264,
    "id": "0371132d",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 265,
    "id": "9ad5e3e2",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 266,
    "id": "8e05b690",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 267,
    "id": "16753794",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 268,
    "id": "86e663d1",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 269,
    "id": "3cb0dc05",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 270,
    "id": "eaf40820",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 271,
    "id": "34a26034",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 272,
    "id": "cf09fe00",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 273,
    "id": "3d1ec429",
    "metadata": {},
    "outputs": [
@@ -277,11 +277,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": null,
    "id": "7228ae69",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Age groups clusterization. We'll make a long table using melt, then pivot to have value for every age across the years.\n",
+    "\n",
     "age_columns = uterine_df2.columns[4:]  # se le prime 4 colonne sono Year, TumourType, Sex, Type\n",
     "\n",
     "df_melted = uterine_df2.melt(\n",
@@ -294,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 275,
    "id": "43fad46a",
    "metadata": {},
    "outputs": [],
@@ -309,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 276,
    "id": "30bde40d",
    "metadata": {},
    "outputs": [
@@ -1160,7 +1162,7 @@
        "[21 rows x 29 columns]"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 276,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,11 +1173,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": null,
    "id": "b2792662",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Values Standardization\n",
     "scaler = StandardScaler()\n",
     "Standardized_age_uterine= scaler.fit_transform(df_age_matrix)\n",
     "Standardized_age_uterine = pd.DataFrame(Standardized_age_uterine, index=df_age_matrix.index, columns=df_age_matrix.columns.drop('Cluster', errors='ignore'))"
@@ -1183,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 278,
    "id": "99a439fc",
    "metadata": {},
    "outputs": [],
@@ -1194,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 279,
    "id": "1ffb4ef7",
    "metadata": {},
    "outputs": [
@@ -1933,7 +1936,7 @@
        "[19 rows x 29 columns]"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 279,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1944,45 +1947,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": null,
    "id": "d2fdfa0e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Year             AgeGroup Cluster\n",
-      "Sex                              \n",
-      "Type                             \n",
-      "Cancer_Type                      \n",
-      "7            Age_40_to_44       0\n",
-      "9            Age_50_to_54       0\n",
-      "15           Age_75_to_79       0\n",
-      "12           Age_60_to_64       1\n",
-      "10           Age_55_to_59       1\n",
-      "13           Age_65_to_69       1\n",
-      "14           Age_70_to_74       1\n",
-      "0              Age_0_to_4       2\n",
-      "6            Age_35_to_39       2\n",
-      "5            Age_30_to_34       2\n",
-      "4            Age_25_to_29       2\n",
-      "3            Age_20_to_24       2\n",
-      "1            Age_10_to_14       2\n",
-      "2            Age_15_to_19       2\n",
-      "11             Age_5_to_9       2\n",
-      "18            Age_Unknown       2\n",
-      "8            Age_45_to_49       3\n",
-      "16           Age_80_to_84       3\n",
-      "17                Age_85+       3\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th>Year</th>\n",
+       "      <th>AgeGroup</th>\n",
+       "      <th>Cluster</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sex</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cancer_Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Age_40_to_44</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Age_45_to_49</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Age_85+</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Age_80_to_84</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Age_60_to_64</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Age_70_to_74</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Age_55_to_59</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Age_65_to_69</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Age_35_to_39</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Age_30_to_34</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Age_25_to_29</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Age_20_to_24</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Age_10_to_14</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Age_5_to_9</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Age_15_to_19</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Age_0_to_4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Age_Unknown</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Age_50_to_54</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Age_75_to_79</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Year             AgeGroup Cluster\n",
+       "Sex                              \n",
+       "Type                             \n",
+       "Cancer_Type                      \n",
+       "7            Age_40_to_44       0\n",
+       "8            Age_45_to_49       0\n",
+       "17                Age_85+       0\n",
+       "16           Age_80_to_84       0\n",
+       "12           Age_60_to_64       1\n",
+       "14           Age_70_to_74       1\n",
+       "10           Age_55_to_59       1\n",
+       "13           Age_65_to_69       1\n",
+       "6            Age_35_to_39       2\n",
+       "5            Age_30_to_34       2\n",
+       "4            Age_25_to_29       2\n",
+       "3            Age_20_to_24       2\n",
+       "1            Age_10_to_14       2\n",
+       "11             Age_5_to_9       2\n",
+       "2            Age_15_to_19       2\n",
+       "0              Age_0_to_4       2\n",
+       "18            Age_Unknown       2\n",
+       "9            Age_50_to_54       3\n",
+       "15           Age_75_to_79       3"
+      ]
+     },
+     "execution_count": 280,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Use KMeans to cluster ages using artifical Intelligence. The machine learning process identify ages with similar behavior.\n",
+    "#This is very useful in public health. \n",
     "kmeans = KMeans(n_clusters=4, random_state=42)\n",
     "Standardized_age_uterine['Cluster'] = kmeans.fit_predict(Standardized_age_uterine)\n",
     "df_clusters = Standardized_age_uterine.reset_index()[['AgeGroup', 'Cluster']].sort_values('Cluster')\n",
-    "print(df_clusters)"
+    "df_clusters"
    ]
   }
  ],
